Add maven opts