@@ -1,4 +1,5 @@
 #!/bin/sh
+export MAVEN_OPTS="-Xms512m -Xmx756m -XX:MaxPermSize=256m"
 
 mvn clean verify
 
